show confirmation dialog when opening view form from edit without save

--- a/share/src/main/amp/web/js/alvex/registers/i18n/FormContainer.properties
+++ b/share/src/main/amp/web/js/alvex/registers/i18n/FormContainer.properties
@@ -5,3 +5,7 @@ register-item.menu.edit=Edit
 register-item.menu.versions=Version History
 register-item.menu.delete=Delete
 register-item.menu.back=Go to register
+registers.form.change.notsaved.title=Open View Form
+registers.form.change.notsaved.message=You are about to open the view form of the register item without saving the edit form. If you made any changes on the current form, they will not be saved. Are you sure?
+registers.form.change.notsaved.yes=Yes
+registers.form.change.notsaved.no=Cancel
