delete items from register action

--- a/share/src/main/amp/web/js/alvex/services/i18n/RegisterService.properties
+++ b/share/src/main/amp/web/js/alvex/services/i18n/RegisterService.properties
@@ -25,4 +25,4 @@ registers.delete.window.title=Delete Register Item
 registers.delete.window.message=Are you sure you want to delete record(s)?
 registers.delete.window.yes=Yes
 registers.delete.window.no=No
-registers.delete.failure=Cannot delete register item(s).
+registers.delete.failure=Cannot delete register item(s)
