permissions column in register

--- a/share/src/main/amp/web/js/alvex/services/i18n/RegisterService.properties
+++ b/share/src/main/amp/web/js/alvex/services/i18n/RegisterService.properties
@@ -26,3 +26,4 @@ registers.delete.window.message=Are you sure you want to delete record(s)?
 registers.delete.window.yes=Yes
 registers.delete.window.no=No
 registers.delete.failure=Cannot delete register item(s)
+registers.column.header.permissions=Permissions
