Export to XLS front

--- a/share/src/main/amp/web/js/alvex/services/i18n/RegisterService.properties
+++ b/share/src/main/amp/web/js/alvex/services/i18n/RegisterService.properties
@@ -2,6 +2,10 @@ registers.update.failure.title=Cannot update register details
 registers.update.failure.details=Something does wrong while trying to update register details
 delete.action.title=Delete
 delete.action.text=Are you sure you want to delete this register? All records within the register will be deleted.
+export.action.title=Export
+export.action.text=Select columns to export. By default visible columns will be exported.
+export.action.ok=Ok
+export.action.cancel=Cancel
 registers.column.retrieval.failure.title=Error
 registers.column.retrieval.failure.message=Cannot retrieve register structure.
 registers.column.actions.title=Actions
@@ -27,3 +31,7 @@ registers.delete.window.yes=Yes
 registers.delete.window.no=No
 registers.delete.failure=Cannot delete register item(s)
 registers.column.header.permissions=Permissions
+registers.export.window.title=Exported file is ready
+registers.export.window.text=Exported file is ready. You can download it using the following link:
+registers.export.window.linklabel=Link
+registers.export.window.close=Cancel
