improve i18n, add ru l10n

--- a/share/src/main/amp/web/js/alvex/services/i18n/RegisterService.properties
+++ b/share/src/main/amp/web/js/alvex/services/i18n/RegisterService.properties
@@ -20,6 +20,7 @@ registers.menu.new-item=New item
 registers.menu.export-xls=Export to XLS
 registers.menu.columns=Columns
 registers.search.button.reset=Reset
+registers.search.button.search=Search
 registers.search.section=Search
 registers.search.listconstraint.alloptions=All options
 registers.menu.columns.save=Save
